# cinema-eng

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: permissions.py  serializer.py  urls.py  views.py
cinema/: admin.py  models.py  urls.py  views.py
cinema/migrations/: 0001_initial.py  0002_remove_chair_availability.py  0003_myuser_firstname_myuser_lastname.py  0004_remove_chair_show.py
cinema/templates/cinema/: base.html  chair_list.html  cinemaroom_list.html  program_list.html  update_status_chair.html
config/: settings.py  urls.py
templates/cinema/: base.html  program_list.html  update_status_chair.html
templates/registration/: login.html  logout.html  register.html
