[tool.poetry]
name = "cinema-eng"
version = "0.1.0"
description = ""
authors = ["esmail211 <smaeil0018@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-mysql = "^4.5.0"
PyMySQL = "^1.0.2"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
